--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mon Jeu</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>60-40</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#000000">
 </head>
 <body>
-  <h1>Jeu de soirée</h1>
-  <button onclick="lancerJeu()">Lancer</button>
-  <div id="resultat"></div>
+  <div class="screen active" id="home">
+    <div class="container">
+      <div class="emoji-icon">😳</div>
+      <h1 class="title">60-40</h1>
+      <p class="subtitle">The party game that reveals everything!</p>
 
-  <script src="app.js"></script>
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log('SW enregistré'))
-        .catch(err => console.log('SW erreur', err));
-    }
-  </script>
+      <button class="main-button">🎮 New Game</button>
+
+      <div class="button-row">
+        <button class="secondary-button">👤 Profile</button>
+        <button class="secondary-button">⚙️ Settings</button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
