--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <h1 class="title">60-40</h1>
       <p class="subtitle">The party game that reveals everything!</p>
 
-      <button class="main-button">🎮 New Game</button>
+      <button class="main-button">New Game</button>
 
       <div class="button-row">
-        <button class="secondary-button">👤 Profile</button>
-        <button class="secondary-button">⚙️ Settings</button>
+        <button class="secondary-button">Profile</button>
+        <button class="secondary-button">Settings</button>
       </div>
     </div>
   </div>
