--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>60-40</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="player-setup.css" />
+<script src="player-setup.js" defer></script>
+
 </head>
 <body>
   <div class="screen active" id="home">
@@ -67,6 +70,42 @@
 
     <button class="main-button">Start Game</button>
     <button class="secondary-button" onclick="showPage('home')">⬅️ Back</button>
+  </div>
+</div>
+
+<!-- Player Setup Screen (third page) -->
+<div id="player-setup-screen" class="screen">
+  <div class="screen-header">
+    <button class="icon-button" onclick="goToScreen('new-game-screen')">⬅️</button>
+    <h2>Players</h2>
+    <button class="icon-button" onclick="goToScreen('home-screen')">🏠</button>
+  </div>
+
+  <p class="hint">Add players to start the game</p>
+
+  <div id="player-grid" class="player-grid">
+    <!-- Player bubbles will be dynamically generated here -->
+  </div>
+
+  <div class="player-adjust-buttons">
+    <button class="adjust-button" onclick="removePlayer()">➖</button>
+    <button class="adjust-button" onclick="addPlayer()">➕</button>
+  </div>
+
+  <button class="main-button" onclick="startGame()">Start Game</button>
+  <p id="error-message" class="error-message" style="display: none;">All players must be completed to start</p>
+</div>
+
+<!-- Modal for player edit -->
+<div id="player-modal" class="modal" style="display: none;">
+  <div class="modal-content">
+    <h3>Edit Profile</h3>
+    <input type="text" id="player-name-input" placeholder="Enter name" />
+    <input type="file" id="player-photo-input" accept="image/*" />
+    <div class="modal-actions">
+      <button class="secondary-button" onclick="closeModal()">Cancel</button>
+      <button class="main-button" onclick="savePlayer()">Save</button>
+    </div>
   </div>
 </div>
 
