--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
   <title>60-40</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="player-setup.css" />
-<script src="player-setup.js" defer></script>
-
+  <script src="player-setup.js" defer></script>
 </head>
 <body>
+  <!-- Home Screen -->
   <div class="screen active" id="home">
     <div class="container">
       <div class="emoji-icon">😳</div>
       <h1 class="title">60-40</h1>
       <p class="subtitle">The party game that reveals everything!</p>
-
-<button class="main-button" onclick="showPage('new-game')">New Game</button>
-
+      <button class="main-button" onclick="showPage('new-game')">New Game</button>
       <div class="button-row">
         <button class="secondary-button">👤 Profile</button>
         <button class="secondary-button">⚙️ Settings</button>
@@ -26,106 +24,108 @@
   </div>
 
   <!-- New Game Screen -->
-<div class="screen" id="new-game">
-  <div class="container">
-    <h2>New Game</h2>
+  <div class="screen" id="new-game">
+    <div class="container">
+      <h2>New Game</h2>
 
-    <label class="subtitle">How many players?</label>
-    <div class="player-slider">
-      <span id="player-count">3</span> players
-      <input type="range" min="3" max="15" value="3" id="player-range" />
-    </div>
+      <label class="subtitle">How many players?</label>
+      <div class="player-slider">
+        <span id="player-count">3</span> players
+        <input type="range" min="3" max="15" value="3" id="player-range" />
+      </div>
 
-    <h3 class="subtitle">Choose question packs</h3>
-    <p class="hint">Select one or more packs to mix questions</p>
+      <h3 class="subtitle">Choose question packs</h3>
+      <p class="hint">Select one or more packs to mix questions</p>
 
-    <div class="pack-list">
-      <label class="pack">
-        <input type="checkbox" name="packs" checked />
-        <span class="icon">🎉</span>
-        <div class="pack-info">
-          <strong>Standard Pack</strong>
-          <small>Classic party questions</small>
-        </div>
-      </label>
+      <div class="pack-list">
+        <label class="pack">
+          <input type="checkbox" name="packs" checked />
+          <span class="icon">🎉</span>
+          <div class="pack-info">
+            <strong>Standard Pack</strong>
+            <small>Classic party questions</small>
+          </div>
+        </label>
 
-      <label class="pack">
-        <input type="checkbox" name="packs" />
-        <span class="icon">💘</span>
-        <div class="pack-info">
-          <strong>Crush Revealer</strong>
-          <small>Romantic & relationship questions</small>
-        </div>
-      </label>
+        <label class="pack">
+          <input type="checkbox" name="packs" />
+          <span class="icon">💘</span>
+          <div class="pack-info">
+            <strong>Crush Revealer</strong>
+            <small>Romantic & relationship questions</small>
+          </div>
+        </label>
 
-      <label class="pack">
-        <input type="checkbox" name="packs" />
-        <span class="icon">🔞</span>
-        <div class="pack-info">
-          <strong>PEGI 21</strong>
-          <small>Adult content – 21+ only</small>
-        </div>
-      </label>
-    </div>
+        <label class="pack">
+          <input type="checkbox" name="packs" />
+          <span class="icon">🔞</span>
+          <div class="pack-info">
+            <strong>PEGI 21</strong>
+            <small>Adult content – 21+ only</small>
+          </div>
+        </label>
+      </div>
 
-    <button class="main-button">Start Game</button>
-    <button class="secondary-button" onclick="showPage('home')">⬅️ Back</button>
-  </div>
-</div>
-
-<!-- Player Setup Screen (third page) -->
-<div id="player-setup-screen" class="screen">
-  <div class="screen-header">
-    <button class="icon-button" onclick="goToScreen('new-game-screen')">⬅️</button>
-    <h2>Players</h2>
-    <button class="icon-button" onclick="goToScreen('home-screen')">🏠</button>
-  </div>
-
-  <p class="hint">Add players to start the game</p>
-
-  <div id="player-grid" class="player-grid">
-    <!-- Player bubbles will be dynamically generated here -->
-  </div>
-
-  <div class="player-adjust-buttons">
-    <button class="adjust-button" onclick="removePlayer()">➖</button>
-    <button class="adjust-button" onclick="addPlayer()">➕</button>
-  </div>
-
-  <button class="main-button" onclick="startGame()">Start Game</button>
-  <p id="error-message" class="error-message" style="display: none;">All players must be completed to start</p>
-</div>
-
-<!-- Modal for player edit -->
-<div id="player-modal" class="modal" style="display: none;">
-  <div class="modal-content">
-    <h3>Edit Profile</h3>
-    <input type="text" id="player-name-input" placeholder="Enter name" />
-    <input type="file" id="player-photo-input" accept="image/*" />
-    <div class="modal-actions">
-      <button class="secondary-button" onclick="closeModal()">Cancel</button>
-      <button class="main-button" onclick="savePlayer()">Save</button>
+      <button class="main-button" onclick="showPage('player-setup-screen')">Start Game</button>
+      <button class="secondary-button" onclick="showPage('home')">⬅️ Back</button>
     </div>
   </div>
-</div>
 
-    <script>
+  <!-- Player Setup Screen -->
+  <div class="screen" id="player-setup-screen">
+    <div class="screen-header">
+      <button class="icon-button" onclick="showPage('new-game')">⬅️</button>
+      <h2>Players</h2>
+      <button class="icon-button" onclick="showPage('home')">🏠</button>
+    </div>
+
+    <p class="hint">Add players to start the game</p>
+
+    <div id="player-grid" class="player-grid">
+      <!-- Player bubbles generated dynamically -->
+    </div>
+
+    <div class="player-adjust-buttons">
+      <button class="adjust-button" onclick="removePlayer()">➖</button>
+      <button class="adjust-button" onclick="addPlayer()">➕</button>
+    </div>
+
+    <button class="main-button" onclick="startGame()">Start Game</button>
+    <p id="error-message" class="error-message" style="display: none;">All players must be completed to start</p>
+  </div>
+
+  <!-- Modal for editing player -->
+  <div id="player-modal" class="modal" style="display: none;">
+    <div class="modal-content">
+      <h3>Edit Profile</h3>
+      <input type="text" id="player-name-input" placeholder="Enter name" />
+      <input type="file" id="player-photo-input" accept="image/*" />
+      <div class="modal-actions">
+        <button class="secondary-button" onclick="closeModal()">Cancel</button>
+        <button class="main-button" onclick="savePlayer()">Save</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Base JS for navigation + slider -->
+  <script>
     function showPage(id) {
       document.querySelectorAll('.screen').forEach(screen => {
         screen.classList.remove('active');
       });
       document.getElementById(id).classList.add('active');
     }
-    document.addEventListener('DOMContentLoaded', () => {
-  const slider = document.getElementById('player-range');
-  const count = document.getElementById('player-count');
 
-  if (slider && count) {
-    slider.addEventListener('input', () => {
-      count.textContent = slider.value;
+    document.addEventListener('DOMContentLoaded', () => {
+      const slider = document.getElementById('player-range');
+      const count = document.getElementById('player-count');
+
+      if (slider && count) {
+        slider.addEventListener('input', () => {
+          count.textContent = slider.value;
+        });
+      }
     });
-  }
-});
   </script>
 </body>
 </html>
